# biye

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  .tasks.yaml  AGENTS.md  AI_CONTEXT.md  CLAUDE.md  CONTRIBUTING.md  DEVELOPMENT_GUIDE.md  LICENSE  PHASE10_TUNING_ANALYSIS.md  PHASE11_ERROR_DIAGNOSTICS.md  PHASE12_BIAS_CORRECTION.md  PROJECT_PROGRESS_2026-06-03.md  README.md  ROADMAP.md  TECHNICAL_DOC.md  WINDOWS_5090D_HANDOFF.md  pyproject.toml  requirements-ci.txt  requirements-mac.txt  requirements-wsl.txt  requirements.txt
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
configs/: default.yaml  scg_rhc_windows5090d.yaml
configs/experiment/: phase10_co_low_lr.yaml  phase10_co_no_aug.yaml  phase10_co_regularized.yaml  vo2max_multimodal.yaml
configs/hardware/: sensor_spec.yaml
data/: README.md
docs/: data_dictionary.md  feature_extraction_analysis.md  roadmap_explanation.md  technical_route_comparison.md
scripts/: build_preprocessed_dataset.py  diagnose_phase11_errors.py  evaluate.py  evaluate_multimodal.py  evaluate_phase12_bias_correction.py  export_onnx.py  import_scg_rhc_dataset.py  package_phase9_artifacts.py  preprocess_all.py  train.py  train_multimodal.py  verify_pipeline.py
src/cardiofit/: __init__.py
src/cardiofit/dataset/: __init__.py  augmentation.py  data_split.py  hdf5_loader.py
src/cardiofit/evaluation/: __init__.py  bland_altman.py  metrics.py  visualization.py
src/cardiofit/models/: __init__.py  loading.py  resnet_se_lstm.py  se_block.py  standardize_layers.py
tests/: test_build_hdf5_labels.py  test_checkpoint_loading.py  test_import_scg_rhc_dataset.py  test_phase11_diagnostics.py  test_phase12_bias_correction.py  test_smoke.py  test_training_config_wiring.py
(+11 files in other folders)
