[project]
name = "cardiofit"
version = "0.1.0"
description = "Multimodal wearable cardiopulmonary assessment system (ECG + PPG + SCG)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "pandas",
  "scipy",
  "h5py",
  "scikit-learn",
  "neurokit2",
  "tensorflow>=2.16",
  "tf2onnx>=1.16",
  "onnx>=1.16",
  "onnxruntime>=1.18",
  "matplotlib",
  "seaborn",
  "pyyaml>=6.0",
  "tqdm",
  "pytest",
  "ruff",
  "black",
  "isort",
]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 88

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
